--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ echo "coverage" >> .gitignore
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/public/packs
+/public/packs-test
+/node_modules
+yarn-debug.log*
+.yarn-integrity
